--- a/src/components/Beverage/Beverage.css
+++ b/src/components/Beverage/Beverage.css
@@ -3,6 +3,7 @@
     margin-top: 30px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     transition: transform 0.5s;
+    padding: 5px;
 }
 .beverage-container:hover{
     transform: translateY(-10px);
