--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,8 +1,17 @@
 .loading-spinner{
-    position: absolute;
+    /* position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    /* border: 5px solid #FFFF00; */
-    padding: 10px;
+    padding: 10px; */
+    margin: auto auto;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    width: 80%;
+}
+@media only screen and (max-width: 600px){
+    .loading-spinner{
+        height: 350px;
+    }
 }
