--- a/src/components/OrderDetail/OrderDetail.css
+++ b/src/components/OrderDetail/OrderDetail.css
@@ -14,6 +14,16 @@
 }
 .order-text{
     border: 1px solid purple;
-    width: 400px;
+    /* width: 400px; */
+    width: 80%;
     margin-left: 5px;
+    
+}
+.order-text h3, p{
+    margin-left: 5px;
+}
+.order-text button{
+    width: 30%;
+    margin-left: 10px;
+    margin-top: 5%;
 }
