delete from order component

--- a/src/components/OrderDetail/OrderDetail.css
+++ b/src/components/OrderDetail/OrderDetail.css
@@ -1,5 +1,5 @@
 .order-container{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* margin: 10px auto; */
     margin: 15px auto;
     padding: 5px;
