--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,6 +10,9 @@
     justify-content: center;
     width: 80%;
 }
+body{
+    background-color: white;
+}
 @media only screen and (max-width: 600px){
     .loading-spinner{
         height: 350px;
