manage beverage from admin

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,8 +3,11 @@
 }
 .login{
     justify-content: center;
+    display: flex;
+    /* padding: 5px; */
     margin-top: 20%;
-    /* border: 1px solid gray; */
+    border: 1px solid gray;
+    background-color: white;
     width: 40%;
     margin-left: 30%;
     border-radius: 10px;
@@ -13,4 +16,14 @@
 }
 .login h3{
     margin-left: 20px;
+}
+.login:hover{
+    background-color: rgb(211, 209, 209);
+}
+@media only screen and (max-width: 600px){
+    .login{
+        /* display: block; */
+        width: 400px;
+        margin: 20% auto;
+    }
 }
