--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -2,7 +2,7 @@
     /* border: 1px solid red; */
     border-right: 1px solid gray;
     width: 20%;
-    height: 93vh;
+    /* height: 93vh; */
     /* background-color: rgba(15, 188, 194, 0.89); */
     background-color: rgb(211, 231, 238);
 }
