--- a/src/components/AddBeverage/AddBeverage.css
+++ b/src/components/AddBeverage/AddBeverage.css
@@ -1,9 +1,9 @@
 .addBeverage h1{
-    margin-top: 15px;
-    margin-left: 55px;
+    /* margin-top: 15px;
+    margin-left: 55px; */
 }
 .form-container{
-    padding: 15px;
+    padding: 25px;
     display: block;
     /* border: 1px solid red; */
     border-radius: 5px;
@@ -11,10 +11,9 @@
     width: 125%;
     margin-left: 10%;
     margin-top: 5%;
-}
-body{
     background-color: rgb(211, 231, 238);
 }
+
 .namePrice{
     display: flex;
 }
@@ -30,7 +29,7 @@ body{
 .form-container input[name="file"]{
    
 }
-button{
+.addBtn{
     width: 100px;
     margin-left: 10%;
 }
