--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,4 +1,9 @@
 .checkout-container{
     height: 150px;
     /* box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
+    background-color: white;
+    border-radius: 10px;
+}
+.checkoutBtn{
+    margin-top: 20px;
 }
