--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,8 +11,10 @@
     width: 80%;
 }
 body{
+    /* background-color: rgb(211, 231, 238); */
     background-color: white;
-}
+    
+  }
 @media only screen and (max-width: 600px){
     .loading-spinner{
         height: 350px;
