--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -12,7 +12,8 @@
 }
 body{
     /* background-color: rgb(211, 231, 238); */
-    background-color: white;
+    /* background-color: white; */
+    background-color: #24282f;
     
   }
 @media only screen and (max-width: 600px){
@@ -20,3 +21,6 @@ body{
         height: 350px;
     }
 }
+
+
+/* extra dhong */
