--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,10 +5,11 @@
     transform: translate(-50%, -50%);
     padding: 10px; */
     margin: auto auto;
+    margin-top: 20%;
     /* border: 1px solid red; */
     display: flex;
     justify-content: center;
-    width: 80%;
+    width: 20%;
 }
 body{
     /* background-color: rgb(211, 231, 238); */
